--- a/Tp3/style.css
+++ b/Tp3/style.css
@@ -113,3 +113,29 @@ h2:hover {
     color: rgb(255, 255, 255);
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 255, 0.6);
 }
+.formulario{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 500px;
+    margin: auto;
+    align-items: center;
+}
+.Enviar{
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.Enviar:hover{
+    background-color: rgb(41, 40, 105);
+    color: rgb(255, 255, 255);
+}
+.Enviar:active{
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    border-color: rgb(109, 136, 255);
+    box-shadow: 0 0 10px 2px rgb(45, 28, 124), 0 0 20px 4px rgb(62, 52, 153);
+}
